--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ submodules/diff-gaussian-rasterization/build
 submodules/fast_gicp/build
 submodules/simple-knn/build
 submodules/simple-knn/simple_knn.egg-info/
-
+dataset/
+dummy.txt
 experiments
 
 **/__pycache__
